Convert y1 ot then nt to osis

--- a/AndBible/assets/readingplan/y1ot1nt1_OTthenNT.properties
+++ b/AndBible/assets/readingplan/y1ot1nt1_OTthenNT.properties
@@ -1,365 +1,367 @@
-1=Gen 1-4
-2=Gen 5-8
-3=Gen 9-12
-4=Gen 13-17
-5=Gen 18-20
-6=Gen 21-23
-7=Gen 24-25
-8=Gen 26-28
-9=Gen 29-31
-10=Gen 32-35
-11=Gen 36-38
-12=Gen 39-41
-13=Gen 42-43
-14=Gen 44-46
-15=Gen 47-50
-16=Exo 1-4
-17=Exo 5-7
-18=Exo 8-10
-19=Exo 11-13
-20=Exo 14-16
-21=Exo 17-20
-22=Exo 21-23
-23=Exo 24-27
-24=Exo 28-30
-25=Exo 31-34
-26=Exo 35-37
-27=Exo 38-40
-28=Lev 1-4
-29=Lev 5-7
-30=Lev 8-10
-31=Lev 11-13
-32=Lev 14-15
-33=Lev 16-18
-34=Lev 19-21
-35=Lev 22-23
-36=Lev 24-25
-37=Lev 26-27
-38=Num 1-2
-39=Num 3-4
-40=Num 5-6
-41=Num 7
-42=Num 8-10
-43=Num 11-13
-44=Num 14-15
-45=Num 16-18
-46=Num 19-21
-47=Num 22-24
-48=Num 25-26
-49=Num 27-29
-50=Num 30-32
-51=Num 33-36
-52=Deu 1-2
-53=Deu 3-4
-54=Deu 5-8
-55=Deu 9-11
-56=Deu 12-15
-57=Deu 16-19
-58=Deu 20-22
-59=Deu 23-25
-60=Deu 26-27
-61=Deu 28-29
-62=Deu 30-32
-63=Deu 33-34
-64=Jos 1-4
-65=Jos 5-7
-66=Jos 8-10
-67=Jos 11-13
-68=Jos 14-17
-69=Jos 18-20
-70=Jos 21-22
-71=Jos 23-24
-72=Judg 1-3
-73=Judg 4-5
-74=Judg 6-8
-75=Judg 9-10
-76=Judg 11-13
-77=Judg 14-16
-78=Judg 17-19
-79=Judg 20-21
-80=Rut 1-4
-81=1 Sa 1-3
-82=1 Sa 4-7
-83=1 Sa 8-12
-84=1 Sa 13-14
-85=1 Sa 15-16
-86=1 Sa 17-18
-87=1 Sa 19-21
-88=1 Sa 22-24
-89=1 Sa 25-27
-90=1 Sa 28-31
-91=2 Sa 1-3
-92=2 Sa 4-7
-93=2 Sa 8-11
-94=2 Sa 12-13
-95=2 Sa 14-16
-96=2 Sa 17-19
-97=2 Sa 20-22
-98=2 Sa 23-24
-99=1 Ki 1-2
-100=1 Ki 3-5
-101=1 Ki 6-7
-102=1 Ki 8-9
-103=1 Ki 10-12
-104=1 Ki 13-15
-105=1 Ki 16-18
-106=1 Ki 19-20
-107=1 Ki 21-22
-108=2 Ki 1-3
-109=2 Ki 4-5
-110=2 Ki 6-8
-111=2 Ki 9-10
-112=2 Ki 11-13
-113=2 Ki 14-16
-114=2 Ki 17-18
-115=2 Ki 19-21
-116=2 Ki 22-23
-117=2 Ki 24-25
-118=1 Ch 1-2
-119=1 Ch 3-4
-120=1 Ch 5-6
-121=1 Ch 7-9
-122=1 Ch 10-12
-123=1 Ch 13-16
-124=1 Ch 17-19
-125=1 Ch 20-23
-126=1 Ch 24-26
-127=1 Ch 27-29
-128=2 Ch 1-4
-129=2 Ch 5-7
-130=2 Ch 8-11
-131=2 Ch 12-16
-132=2 Ch 17-20
-133=2 Ch 21-24
-134=2 Ch 25-28
-135=2 Ch 29-31
-136=2 Ch 32-34
-137=2 Ch 35-36
-138=Ezr 1-4
-139=Ezr 5-7
-140=Ezr 8-10
-141=Neh 1-3
-142=Neh 4-7
-143=Neh 8-10
-144=Neh 11-13
-145=Est 1-5
-146=Est 6-10
-147=Job 1-4
-148=Job 5-8
-149=Job 9-12
-150=Job 13-16
-151=Job 17-20
-152=Job 21-24
-153=Job 25-30
-154=Job 31-34
-155=Job 35-38
-156=Job 39-42
-157=Psa 1-8
-158=Psa 9-17
-159=Psa 18-21
-160=Psa 22-27
-161=Psa 28-33
-162=Psa 34-37
-163=Psa 38-42
-164=Psa 43-49
-165=Psa 50-55
-166=Psa 56-61
-167=Psa 62-68
-168=Psa 69-72
-169=Psa 73-77
-170=Psa 78-80
-171=Psa 81-88
-172=Psa 89-94
-173=Psa 95-103
-174=Psa 104-106
-175=Psa 107-111
-176=Psa 112-118
-177=Psa 119
-178=Psa 120-133
-179=Psa 134-140
-180=Psa 141-150
-181=Pro 1-3
-182=Pro 4-7
-183=Pro 8-11
-184=Pro 12-14
-185=Pro 15-17
-186=Pro 18-20
-187=Pro 21-23
-188=Pro 24-26
-189=Pro 27-29
-190=Pro 30-31
-191=Ecc 1-4
-192=Ecc 5-8
-193=Ecc 9-12
-194=Song of Songs 1-4
-195=Song of Songs 5-8
-196=Isa 1-3
-197=Isa 4-8
-198=Isa 9-11
-199=Isa 12-14
-200=Isa 15-19
-201=Isa 20-24
-202=Isa 25-28
-203=Isa 29-31
-204=Isa 32-34
-205=Isa 35-37
-206=Isa 38-40
-207=Isa 41-43
-208=Isa 44-46
-209=Isa 47-49
-210=Isa 50-52
-211=Isa 53-56
-212=Isa 57-59
-213=Isa 60-63
-214=Isa 64-66
-215=Jer 1-3
-216=Jer 4-5
-217=Jer 6-8
-218=Jer 9-11
-219=Jer 12-14
-220=Jer 15-17
-221=Jer 18-21
-222=Jer 22-24
-223=Jer 25-27
-224=Jer 28-30
-225=Jer 31-32
-226=Jer 33-36
-227=Jer 37-39
-228=Jer 40-43
-229=Jer 44-46
-230=Jer 47-48
-231=Jer 49
-232=Jer 50
-233=Jer 51-52
-234=Lam 1-2
-235=Lam 3-5
-236=Eze 1-4
-237=Eze 5-8
-238=Eze 9-12
-239=Eze 13-15
-240=Eze 16-17
-241=Eze 18-20
-242=Eze 21-22
-243=Eze 23-24
-244=Eze 25-27
-245=Eze 28-30
-246=Eze 31-32
-247=Eze 33-35
-248=Eze 36-38
-249=Eze 39-40
-250=Eze 41-43
-251=Eze 44-46
-252=Eze 47-48
-253=Dan 1-3
-254=Dan 4-5
-255=Dan 6-8
-256=Dan 9-12
-257=Hos 1-4
-258=Hos 5-9
-259=Hos 10-14
-260=Joe 1-3
-261=Amo 1-4
-262=Amo 5-9
-263=Obd
-264=Jon 1-4
-265=Mic 1-4
-266=Mic 5-7
-267=Nah 1-3
-268=Hab 1-3
-269=Zep 1-3
-270=Hag 1-2
-271=Zec 1-5
-272=Zec 6-10
-273=Zec 11-14
-274=Mal 1-4
-275=Mat 1-4
-276=Mat 5-6
-277=Mat 7-9
-278=Mat 10-11
-279=Mat 12-13
-280=Mat 14-17
-281=Mat 18-20
-282=Mat 21-22
-283=Mat 23-24
-284=Mat 25-26
-285=Mat 27-28
-286=Mar 1-3
-287=Mar 4-5
-288=Mar 6-7
-289=Mar 8-9
-290=Mar 10-11
-291=Mar 12-13
-292=Mar 14
-293=Mar 15-16
-294=Luk 1-2
-295=Luk 3-4
-296=Luk 5-6
-297=Luk 7-8
-298=Luk 9-10
-299=Luk 11-12
-300=Luk 13-15
-301=Luk 16-18
-302=Luk 19-20
-303=Luk 21-22
-304=Luk 23-24
-305=Joh 1-2
-306=Joh 3-4
-307=Joh 5-6
-308=Joh 7-8
-309=Joh 9-10
-310=Joh 11-12
-311=Joh 13-15
-312=Joh 16-17
-313=Joh 18-19
-314=Joh 20-21
-315=Act 1-3
-316=Act 4-5
-317=Act 6-7
-318=Act 8-9
-319=Act 10-11
-320=Act 12-13
-321=Act 14-15
-322=Act 16-17
-323=Act 18-19
-324=Act 20-21
-325=Act 22-23
-326=Act 24-26
-327=Act 27-28
-328=Rom 1-3
-329=Rom 4-7
-330=Rom 8-10
-331=Rom 11-14
-332=Rom 15-16
-333=1 Cor 1-4
-334=1 Cor 5-9
-335=1 Cor 10-13
-336=1 Cor 14-16
-337=2 Cor 1-4
-338=2 Cor 5-9
-339=2 Cor 10-13
-340=Gal 1-3
-341=Gal 4-6
-342=Eph 1-3
-343=Eph 4-6
-344=Phili 1-4
-345=Col 1-4
-346=1 Thess 1-5
-347=2 Thess 1-3
-348=1 Tim 1-6
-349=2 Tim 1-4
-350=Phile, Tit 1-3
-351=Heb 1-4
-352=Heb 5-8
-353=Heb 9-10
-354=Heb 11-13
-355=Jam 1-5
-356=2 Peter 1-3, 1 Peter 1-5
-357=1 Joh 1-5
-358=2 Joh, 3 Joh
-359=Jude, Rev 1-3
-360=Rev 4-7
-361=Rev 8-11
-362=Rev 12-14
-363=Rev 15-17
-364=Rev 18-19
-365=Rev 20-22
+Versification=KJV
+PassageReferenceType=OSIS
+1=Gen.1-Gen.4
+2=Gen.5-Gen.8
+3=Gen.9-Gen.12
+4=Gen.13-Gen.17
+5=Gen.18-Gen.20
+6=Gen.21-Gen.23
+7=Gen.24-Gen.25
+8=Gen.26-Gen.28
+9=Gen.29-Gen.31
+10=Gen.32-Gen.35
+11=Gen.36-Gen.38
+12=Gen.39-Gen.41
+13=Gen.42-Gen.43
+14=Gen.44-Gen.46
+15=Gen.47-Gen.50
+16=Exod.1-Exod.4
+17=Exod.5-Exod.7
+18=Exod.8-Exod.10
+19=Exod.11-Exod.13
+20=Exod.14-Exod.16
+21=Exod.17-Exod.20
+22=Exod.21-Exod.23
+23=Exod.24-Exod.27
+24=Exod.28-Exod.30
+25=Exod.31-Exod.34
+26=Exod.35-Exod.37
+27=Exod.38-Exod.40
+28=Lev.1-Lev.4
+29=Lev.5-Lev.7
+30=Lev.8-Lev.10
+31=Lev.11-Lev.13
+32=Lev.14-Lev.15
+33=Lev.16-Lev.18
+34=Lev.19-Lev.21
+35=Lev.22-Lev.23
+36=Lev.24-Lev.25
+37=Lev.26-Lev.27
+38=Num.1-Num.2
+39=Num.3-Num.4
+40=Num.5-Num.6
+41=Num.7
+42=Num.8-Num.10
+43=Num.11-Num.13
+44=Num.14-Num.15
+45=Num.16-Num.18
+46=Num.19-Num.21
+47=Num.22-Num.24
+48=Num.25-Num.26
+49=Num.27-Num.29
+50=Num.30-Num.32
+51=Num.33-Num.36
+52=Deut.1-Deut.2
+53=Deut.3-Deut.4
+54=Deut.5-Deut.8
+55=Deut.9-Deut.11
+56=Deut.12-Deut.15
+57=Deut.16-Deut.19
+58=Deut.20-Deut.22
+59=Deut.23-Deut.25
+60=Deut.26-Deut.27
+61=Deut.28-Deut.29
+62=Deut.30-Deut.32
+63=Deut.33-Deut.34
+64=Josh.1-Josh.4
+65=Josh.5-Josh.7
+66=Josh.8-Josh.10
+67=Josh.11-Josh.13
+68=Josh.14-Josh.17
+69=Josh.18-Josh.20
+70=Josh.21-Josh.22
+71=Josh.23-Josh.24
+72=Judg.1-Judg.3
+73=Judg.4-Judg.5
+74=Judg.6-Judg.8
+75=Judg.9-Judg.10
+76=Judg.11-Judg.13
+77=Judg.14-Judg.16
+78=Judg.17-Judg.19
+79=Judg.20-Judg.21
+80=Ruth.1-Ruth.4
+81=1Sam.1-1Sam.3
+82=1Sam.4-1Sam.7
+83=1Sam.8-1Sam.12
+84=1Sam.13-1Sam.14
+85=1Sam.15-1Sam.16
+86=1Sam.17-1Sam.18
+87=1Sam.19-1Sam.21
+88=1Sam.22-1Sam.24
+89=1Sam.25-1Sam.27
+90=1Sam.28-1Sam.31
+91=2Sam.1-2Sam.3
+92=2Sam.4-2Sam.7
+93=2Sam.8-2Sam.11
+94=2Sam.12-2Sam.13
+95=2Sam.14-2Sam.16
+96=2Sam.17-2Sam.19
+97=2Sam.20-2Sam.22
+98=2Sam.23-2Sam.24
+99=1Kgs.1-1Kgs.2
+100=1Kgs.3-1Kgs.5
+101=1Kgs.6-1Kgs.7
+102=1Kgs.8-1Kgs.9
+103=1Kgs.10-1Kgs.12
+104=1Kgs.13-1Kgs.15
+105=1Kgs.16-1Kgs.18
+106=1Kgs.19-1Kgs.20
+107=1Kgs.21-1Kgs.22
+108=2Kgs.1-2Kgs.3
+109=2Kgs.4-2Kgs.5
+110=2Kgs.6-2Kgs.8
+111=2Kgs.9-2Kgs.10
+112=2Kgs.11-2Kgs.13
+113=2Kgs.14-2Kgs.16
+114=2Kgs.17-2Kgs.18
+115=2Kgs.19-2Kgs.21
+116=2Kgs.22-2Kgs.23
+117=2Kgs.24-2Kgs.25
+118=1Chr.1-1Chr.2
+119=1Chr.3-1Chr.4
+120=1Chr.5-1Chr.6
+121=1Chr.7-1Chr.9
+122=1Chr.10-1Chr.12
+123=1Chr.13-1Chr.16
+124=1Chr.17-1Chr.19
+125=1Chr.20-1Chr.23
+126=1Chr.24-1Chr.26
+127=1Chr.27-1Chr.29
+128=2Chr.1-2Chr.4
+129=2Chr.5-2Chr.7
+130=2Chr.8-2Chr.11
+131=2Chr.12-2Chr.16
+132=2Chr.17-2Chr.20
+133=2Chr.21-2Chr.24
+134=2Chr.25-2Chr.28
+135=2Chr.29-2Chr.31
+136=2Chr.32-2Chr.34
+137=2Chr.35-2Chr.36
+138=Ezra.1-Ezra.4
+139=Ezra.5-Ezra.7
+140=Ezra.8-Ezra.10
+141=Neh.1-Neh.3
+142=Neh.4-Neh.7
+143=Neh.8-Neh.10
+144=Neh.11-Neh.13
+145=Esth.1-Esth.5
+146=Esth.6-Esth.10
+147=Job.1-Job.4
+148=Job.5-Job.8
+149=Job.9-Job.12
+150=Job.13-Job.16
+151=Job.17-Job.20
+152=Job.21-Job.24
+153=Job.25-Job.30
+154=Job.31-Job.34
+155=Job.35-Job.38
+156=Job.39-Job.42
+157=Ps.1-Ps.8
+158=Ps.9-Ps.17
+159=Ps.18-Ps.21
+160=Ps.22-Ps.27
+161=Ps.28-Ps.33
+162=Ps.34-Ps.37
+163=Ps.38-Ps.42
+164=Ps.43-Ps.49
+165=Ps.50-Ps.55
+166=Ps.56-Ps.61
+167=Ps.62-Ps.68
+168=Ps.69-Ps.72
+169=Ps.73-Ps.77
+170=Ps.78-Ps.80
+171=Ps.81-Ps.88
+172=Ps.89-Ps.94
+173=Ps.95-Ps.103
+174=Ps.104-Ps.106
+175=Ps.107-Ps.111
+176=Ps.112-Ps.118
+177=Ps.119
+178=Ps.120-Ps.133
+179=Ps.134-Ps.140
+180=Ps.141-Ps.150
+181=Prov.1-Prov.3
+182=Prov.4-Prov.7
+183=Prov.8-Prov.11
+184=Prov.12-Prov.14
+185=Prov.15-Prov.17
+186=Prov.18-Prov.20
+187=Prov.21-Prov.23
+188=Prov.24-Prov.26
+189=Prov.27-Prov.29
+190=Prov.30-Prov.31
+191=Eccl.1-Eccl.4
+192=Eccl.5-Eccl.8
+193=Eccl.9-Eccl.12
+194=Song.1-Song.4
+195=Song.5-Song.8
+196=Isa.1-Isa.3
+197=Isa.4-Isa.8
+198=Isa.9-Isa.11
+199=Isa.12-Isa.14
+200=Isa.15-Isa.19
+201=Isa.20-Isa.24
+202=Isa.25-Isa.28
+203=Isa.29-Isa.31
+204=Isa.32-Isa.34
+205=Isa.35-Isa.37
+206=Isa.38-Isa.40
+207=Isa.41-Isa.43
+208=Isa.44-Isa.46
+209=Isa.47-Isa.49
+210=Isa.50-Isa.52
+211=Isa.53-Isa.56
+212=Isa.57-Isa.59
+213=Isa.60-Isa.63
+214=Isa.64-Isa.66
+215=Jer.1-Jer.3
+216=Jer.4-Jer.5
+217=Jer.6-Jer.8
+218=Jer.9-Jer.11
+219=Jer.12-Jer.14
+220=Jer.15-Jer.17
+221=Jer.18-Jer.21
+222=Jer.22-Jer.24
+223=Jer.25-Jer.27
+224=Jer.28-Jer.30
+225=Jer.31-Jer.32
+226=Jer.33-Jer.36
+227=Jer.37-Jer.39
+228=Jer.40-Jer.43
+229=Jer.44-Jer.46
+230=Jer.47-Jer.48
+231=Jer.49
+232=Jer.50
+233=Jer.51-Jer.52
+234=Lam.1-Lam.2
+235=Lam.3-Lam.5
+236=Ezek.1-Ezek.4
+237=Ezek.5-Ezek.8
+238=Ezek.9-Ezek.12
+239=Ezek.13-Ezek.15
+240=Ezek.16-Ezek.17
+241=Ezek.18-Ezek.20
+242=Ezek.21-Ezek.22
+243=Ezek.23-Ezek.24
+244=Ezek.25-Ezek.27
+245=Ezek.28-Ezek.30
+246=Ezek.31-Ezek.32
+247=Ezek.33-Ezek.35
+248=Ezek.36-Ezek.38
+249=Ezek.39-Ezek.40
+250=Ezek.41-Ezek.43
+251=Ezek.44-Ezek.46
+252=Ezek.47-Ezek.48
+253=Dan.1-Dan.3
+254=Dan.4-Dan.5
+255=Dan.6-Dan.8
+256=Dan.9-Dan.12
+257=Hos.1-Hos.4
+258=Hos.5-Hos.9
+259=Hos.10-Hos.14
+260=Joel.1-Joel.3
+261=Amos.1-Amos.4
+262=Amos.5-Amos.9
+263=Obad.1
+264=Jonah.1-Jonah.4
+265=Mic.1-Mic.4
+266=Mic.5-Mic.7
+267=Nah.1-Nah.3
+268=Hab.1-Hab.3
+269=Zeph.1-Zeph.3
+270=Hag.1-Hag.2
+271=Zech.1-Zech.5
+272=Zech.6-Zech.10
+273=Zech.11-Zech.14
+274=Mal.1-Mal.4
+275=Matt.1-Matt.4
+276=Matt.5-Matt.6
+277=Matt.7-Matt.9
+278=Matt.10-Matt.11
+279=Matt.12-Matt.13
+280=Matt.14-Matt.17
+281=Matt.18-Matt.20
+282=Matt.21-Matt.22
+283=Matt.23-Matt.24
+284=Matt.25-Matt.26
+285=Matt.27-Matt.28
+286=Mark.1-Mark.3
+287=Mark.4-Mark.5
+288=Mark.6-Mark.7
+289=Mark.8-Mark.9
+290=Mark.10-Mark.11
+291=Mark.12-Mark.13
+292=Mark.14
+293=Mark.15-Mark.16
+294=Luke.1-Luke.2
+295=Luke.3-Luke.4
+296=Luke.5-Luke.6
+297=Luke.7-Luke.8
+298=Luke.9-Luke.10
+299=Luke.11-Luke.12
+300=Luke.13-Luke.15
+301=Luke.16-Luke.18
+302=Luke.19-Luke.20
+303=Luke.21-Luke.22
+304=Luke.23-Luke.24
+305=John.1-John.2
+306=John.3-John.4
+307=John.5-John.6
+308=John.7-John.8
+309=John.9-John.10
+310=John.11-John.12
+311=John.13-John.15
+312=John.16-John.17
+313=John.18-John.19
+314=John.20-John.21
+315=Acts.1-Acts.3
+316=Acts.4-Acts.5
+317=Acts.6-Acts.7
+318=Acts.8-Acts.9
+319=Acts.10-Acts.11
+320=Acts.12-Acts.13
+321=Acts.14-Acts.15
+322=Acts.16-Acts.17
+323=Acts.18-Acts.19
+324=Acts.20-Acts.21
+325=Acts.22-Acts.23
+326=Acts.24-Acts.26
+327=Acts.27-Acts.28
+328=Rom.1-Rom.3
+329=Rom.4-Rom.7
+330=Rom.8-Rom.10
+331=Rom.11-Rom.14
+332=Rom.15-Rom.16
+333=1Cor.1-1Cor.4
+334=1Cor.5-1Cor.9
+335=1Cor.10-1Cor.13
+336=1Cor.14-1Cor.16
+337=2Cor.1-2Cor.4
+338=2Cor.5-2Cor.9
+339=2Cor.10-2Cor.13
+340=Gal.1-Gal.3
+341=Gal.4-Gal.6
+342=Eph.1-Eph.3
+343=Eph.4-Eph.6
+344=Phil.1-Phil.4
+345=Col.1-Col.4
+346=1Thess.1-1Thess.5
+347=2Thess.1-2Thess.3
+348=1Tim.1-1Tim.6
+349=2Tim.1-2Tim.4
+350=Phlm.1,Tit.1-Tit.3
+351=Heb.1-Heb.4
+352=Heb.5-Heb.8
+353=Heb.9-Heb.10
+354=Heb.11-Heb.13
+355=Jam.1-Jam.5
+356=1Pet.1-1Pet.5,2Pet.1-2Pet.3
+357=1John.1-1John.5
+358=2John.1,3John.1
+359=Jude.1,Rev.1-Rev.3
+360=Rev.4-Rev.7
+361=Rev.8-Rev.11
+362=Rev.12-Rev.14
+363=Rev.15-Rev.17
+364=Rev.18-Rev.19
+365=Rev.20-Rev.22
