Convert reading plans to osis

--- a/AndBible/assets/readingplan/y1ntpspr.properties
+++ b/AndBible/assets/readingplan/y1ntpspr.properties
@@ -1,366 +1,367 @@
 # Courtesy of HEARTLIGHT Internet Magazine http://www.heartlight.org
-1=Psa 1-2
-2=Luk 1
-3=Luk 2
-4=Luk 3
-5=Luk 4
-6=Pro 1
-7=Psa 3-5
-8=Luk 5
-9=Luk 6
-10=Luk 7
-11=Luk 8
-12=Luk 9
-13=Psa 6-7
-14=Luk 10
-15=Luk 11
-16=Luk 12
-17=Pro 2
-18=Luk 13
-19=Luk 14
-20=Psa 8-9
-21=Luk 15
-22=Luk 16
-23=Luk 17
-24=Luk 18
-25=Psa 10-12
-26=Luk 19
-27=Luk 20
-28=Luk 21
-29=Luk 22
-30=Luk 23
-31=Luk 24
-32=Psa 16-17
-33=Pro 3
-34=Act 1
-35=Act 2
-36=Act 3
-37=Act 4
-38=Act 5
-39=Psa 18
-40=Act 6
-41=Act 7
-42=Act 8
-43=Psa 19-20
-44=Act 9
-45=Act 10
-46=Act 11
-47=Pro 4
-48=Act 12
-49=Act 19
-50=Act 15
-51=Psa 21-22
-52=Act 15
-53=Act 16
-54=Pro 5
-55=Act 17
-56=Act 18
-57=Act 19
-58=Act 20
-59=Psa 23-24
-60=Act 21
-61=Act 22
-62=Act 23
-63=Psa 13-15
-64=Act 24
-65=Act 25
-66=Act 26
-67=Act 27
-68=Act 28
-69=Pro 6
-70=Psa 25-26
-71=1Ti 1
-72=1Ti 2
-73=1Ti 3
-74=1Ti 4
-75=1Ti 5
-76=1Ti 6
-77=Psa 27-29
-78=2Ti 1
-79=2Ti 2
-80=2Ti 3
-81=2Ti 4
-82=Psa 30-31
-83=Pro 7
-84=Tit 1
-85=Tit 2
-86=Tit 3
-87=Psa 32-33
-88=Pro 8
-89=Phile
-90=Psa 34-35
-91=Mar 1
-92=Mar 2
-93=Mar 3
-94=Mar 4
-95=Mar 5
-96=Mar 6
-97=Pro 9
-98=Mar 7
-99=Mar 8
-100=Mar 9
-101=Mar 10
-102=Psa 36
-103=Mar 11
-104=Mar 12
-105=Mar 13
-106=Mar 14
-107=Mar 15
-108=Mar 16
-109=Psa 37
-110=1Pe 1
-111=1Pe 2
-112=1Pe 3
-113=1Pe 4
-114=1Pe 5
-115=Psa 38
-116=2Pe 1
-117=2Pe 2
-118=2Pe 3
-119=Psa 39-40
-120=Pro 10
-121=Psa 41
-122=Gal 1
-123=Gal 2
-124=Gal 3
-125=Gal 4
-126=Gal 5
-127=Gal 6
-128=Psa 42-43
-129=1Th 1
-130=1Th 2
-131=1Th 3
-132=1Th 4
-133=1Th 5
-134=Psa 44-45
-135=Pro 11
-136=2Th 1
-137=2Th 2
-138=2Th 3
-139=Psa 46-47
-140=Phili 1
-141=Phili 2
-142=Phili 3
-143=Phili 4
-144=Psa 48-49
-145=Col 1
-146=Col 2
-147=Col 3
-148=Col 4
-149=Psa 50
-150=Psa 51-53
-151=Pro 12
-152=Eph 1
-153=Eph 2
-154=Eph 3
-155=Eph 4
-156=Eph 5
-157=Eph 6
-158=Psa 54-55
-159=Pro 13
-160=Heb 1
-161=Heb 2
-162=Heb 3
-163=Heb 4
-164=Psa 56-57
-165=Heb 5
-166=Heb 6
-167=Heb 7
-168=Heb 8
-169=Heb 9
-170=Psa 58-59
-171=Pro 14
-172=Heb 10
-173=Heb 11
-174=Heb 12
-175=Heb 13
-176=Psa 60-61
-177=Jam 1
-178=Jam 2
-179=Jam 3
-180=Jam 4
-181=Jam 5
-182=Psa 62-64
-183=Pro 15
-184=Psa 65-67
-185=Mat 1
-186=Mat 2
-187=Mat 3
-188=Mat 4
-189=Psa 68
-190=Pro 16
-191=Mat 5
-192=Mat 6
-193=Mat 7
-194=Psa 69-70
-195=Pro 17
-196=Mat 8
-197=Mat 9
-198=Mat 10
-199=Mat 11
-200=Mat 12
-201=Mat 13
-202=Psa 71-72
-203=Pro 18
-204=Mat 14
-205=Mat 15
-206=Mat 16
-207=Mat 17
-208=Mat 18
-209=Psa 73
-210=Mat 19
-211=Mat 20
-212=Mat 21
-213=Mat 22
-214=Psa 74-75
-215=Psa 76-77
-216=Pro 19
-217=Mat 23
-218=Mat 24
-219=Mat 25
-220=Psa 78
-221=Mat 26
-222=Mat 27
-223=Mat 28
-224=Psa 79-80
-225=Psa 81-83
-226=Rom 1
-227=Rom 2
-228=Rom 3
-229=Psa 84-85
-230=Psa 86-88
-231=Rom 4
-232=Rom 5
-233=Rom 6
-234=Rom 7
-235=Rom 8
-236=Psa 89
-237=Pro 20
-238=Psa 90-91
-239=Rom 9
-240=Rom 10
-241=Rom 11
-242=Psa 92-93
-243=Psa 94
-244=Psa 95-96
-245=Rom 12
-246=Rom 13
-247=Rom 14
-248=Rom 15
-249=Rom 16
-250=Psa 97-98
-251=Pro 21
-252=Psa 99-102
-253=1Cor 1
-254=1Cor 2
-255=1Cor 3
-256=Psa 103
-257=1Cor 4
-258=1Cor 5
-259=Psa 104
-260=1Cor 6
-261=1Cor 7
-262=1Cor 8
-263=1Cor 9
-264=Psa 105
-265=1Cor 10
-266=1Cor 11
-267=1Cor 12
-268=1Cor 13
-269=1Cor 14
-270=1Cor 15
-271=1Cor 16
-272=Pro 22
-273=Psa 106-108
-274=2Cor 1
-275=2Cor 2
-276=2Cor 3
-277=Psa 108-109
-278=2Cor 4
-279=2Cor 5
-280=Psa 110-111
-281=2Cor 6
-282=2Cor 7
-283=Psa 112-114
-284=Pro 23
-285=2Cor 8
-286=2Cor 9
-287=Psa 115-116
-288=2Cor 10
-289=2Cor 11
-290=2Cor 12
-291=2Cor 13
-292=Psa 117-118
-293=Pro 24
-294=Jude
-295=Psa 119
-296=1 Joh 1
-297=1 Joh 2
-298=1 Joh 3
-299=1 Joh 4
-300=1 Joh 5
-301=Psa 120-122
-302=Pro 25
-303=2 Joh
-304=3 Joh
-305=Psa 123-125
-306=Joh 1
-307=Joh 2
-308=Joh 3
-309=Joh 4
-310=Joh 5
-311=Psa 126-128
-312=Pro 26
-313=Joh 6
-314=Joh 7
-315=Joh 8
-316=Joh 9
-317=Psa 129-131
-318=Joh 10
-319=Joh 11
-320=Joh 12
-321=Psa 132
-322=Pro 27
-323=Joh 13
-324=Joh 14
-325=Joh 15
-326=Joh 16
-327=Joh 17
-328=Psa 133-134
-329=Psa 135-136
-330=Joh 18
-331=Joh 19
-332=Joh 20
-333=Joh 21
-334=Pro 28
-335=Psa 137-138
-336=Rev 1
-337=Rev 2
-338=Rev 3
-339=Psa 139-140
-340=Psa 141-142
-341=Rev 4
-342=Rev 5
-343=Rev 6
-344=Rev 7
-345=Psa 143-145
-346=Pro 29
-347=Rev 8
-348=Rev 9
-349=Rev 10
-350=Rev 11
-351=Psa 146-147
-352=Pro 30
-353=Rev 12
-354=Rev 13
-355=Rev 14
-356=Rev 15
-357=Rev 16
-358=Rev 17
-359=Pro 31
-360=Rev 18
-361=Rev 19
-362=Rev 20
-363=Rev 21
-364=Rev 22
-365=Psa 148-150
+PassageReferenceType=OSIS
+1=Ps.1-Ps.2
+2=Luke.1
+3=Luke.2
+4=Luke.3
+5=Luke.4
+6=Prov.1
+7=Ps.3-Ps.5
+8=Luke.5
+9=Luke.6
+10=Luke.7
+11=Luke.8
+12=Luke.9
+13=Ps.6-Ps.7
+14=Luke.10
+15=Luke.11
+16=Luke.12
+17=Prov.2
+18=Luke.13
+19=Luke.14
+20=Ps.8-Ps.9
+21=Luke.15
+22=Luke.16
+23=Luke.17
+24=Luke.18
+25=Ps.10-Ps.12
+26=Luke.19
+27=Luke.20
+28=Luke.21
+29=Luke.22
+30=Luke.23
+31=Luke.24
+32=Ps.16-Ps.17
+33=Prov.3
+34=Acts.1
+35=Acts.2
+36=Acts.3
+37=Acts.4
+38=Acts.5
+39=Ps.18
+40=Acts.6
+41=Acts.7
+42=Acts.8
+43=Ps.19-Ps.20
+44=Acts.9
+45=Acts.10
+46=Acts.11
+47=Prov.4
+48=Acts.12
+49=Acts.19
+50=Acts.15
+51=Ps.21-Ps.22
+52=Acts.15
+53=Acts.16
+54=Prov.5
+55=Acts.17
+56=Acts.18
+57=Acts.19
+58=Acts.20
+59=Ps.23-Ps.24
+60=Acts.21
+61=Acts.22
+62=Acts.23
+63=Ps.13-Ps.15
+64=Acts.24
+65=Acts.25
+66=Acts.26
+67=Acts.27
+68=Acts.28
+69=Prov.6
+70=Ps.25-Ps.26
+71=1Tim.1
+72=1Tim.2
+73=1Tim.3
+74=1Tim.4
+75=1Tim.5
+76=1Tim.6
+77=Ps.27-Ps.29
+78=2Tim.1
+79=2Tim.2
+80=2Tim.3
+81=2Tim.4
+82=Ps.30-Ps.31
+83=Prov.7
+84=Titus.1
+85=Titus.2
+86=Titus.3
+87=Ps.32-Ps.33
+88=Prov.8
+89=Phlm.1
+90=Ps.34-Ps.35
+91=Mark.1
+92=Mark.2
+93=Mark.3
+94=Mark.4
+95=Mark.5
+96=Mark.6
+97=Prov.9
+98=Mark.7
+99=Mark.8
+100=Mark.9
+101=Mark.10
+102=Ps.36
+103=Mark.11
+104=Mark.12
+105=Mark.13
+106=Mark.14
+107=Mark.15
+108=Mark.16
+109=Ps.37
+110=1Pet.1
+111=1Pet.2
+112=1Pet.3
+113=1Pet.4
+114=1Pet.5
+115=Ps.38
+116=2Pet.1
+117=2Pet.2
+118=2Pet.3
+119=Ps.39-Ps.40
+120=Prov.10
+121=Ps.41
+122=Gal.1
+123=Gal.2
+124=Gal.3
+125=Gal.4
+126=Gal.5
+127=Gal.6
+128=Ps.42-Ps.43
+129=1Thess.1
+130=1Thess.2
+131=1Thess.3
+132=1Thess.4
+133=1Thess.5
+134=Ps.44-Ps.45
+135=Prov.11
+136=2Thess.1
+137=2Thess.2
+138=2Thess.3
+139=Ps.46-Ps.47
+140=Phil.1
+141=Phil.2
+142=Phil.3
+143=Phil.4
+144=Ps.48-Ps.49
+145=Col.1
+146=Col.2
+147=Col.3
+148=Col.4
+149=Ps.50
+150=Ps.51-Ps.53
+151=Prov.12
+152=Eph.1
+153=Eph.2
+154=Eph.3
+155=Eph.4
+156=Eph.5
+157=Eph.6
+158=Ps.54-Ps.55
+159=Prov.13
+160=Heb.1
+161=Heb.2
+162=Heb.3
+163=Heb.4
+164=Ps.56-Ps.57
+165=Heb.5
+166=Heb.6
+167=Heb.7
+168=Heb.8
+169=Heb.9
+170=Ps.58-Ps.59
+171=Prov.14
+172=Heb.10
+173=Heb.11
+174=Heb.12
+175=Heb.13
+176=Ps.60-Ps.61
+177=Jas.1
+178=Jas.2
+179=Jas.3
+180=Jas.4
+181=Jas.5
+182=Ps.62-Ps.64
+183=Prov.15
+184=Ps.65-Ps.67
+185=Matt.1
+186=Matt.2
+187=Matt.3
+188=Matt.4
+189=Ps.68
+190=Prov.16
+191=Matt.5
+192=Matt.6
+193=Matt.7
+194=Ps.69-Ps.70
+195=Prov.17
+196=Matt.8
+197=Matt.9
+198=Matt.10
+199=Matt.11
+200=Matt.12
+201=Matt.13
+202=Ps.71-Ps.72
+203=Prov.18
+204=Matt.14
+205=Matt.15
+206=Matt.16
+207=Matt.17
+208=Matt.18
+209=Ps.73
+210=Matt.19
+211=Matt.20
+212=Matt.21
+213=Matt.22
+214=Ps.74-Ps.75
+215=Ps.76-Ps.77
+216=Prov.19
+217=Matt.23
+218=Matt.24
+219=Matt.25
+220=Ps.78
+221=Matt.26
+222=Matt.27
+223=Matt.28
+224=Ps.79-Ps.80
+225=Ps.81-Ps.83
+226=Rom.1
+227=Rom.2
+228=Rom.3
+229=Ps.84-Ps.85
+230=Ps.86-Ps.88
+231=Rom.4
+232=Rom.5
+233=Rom.6
+234=Rom.7
+235=Rom.8
+236=Ps.89
+237=Prov.20
+238=Ps.90-Ps.91
+239=Rom.9
+240=Rom.10
+241=Rom.11
+242=Ps.92-Ps.93
+243=Ps.94
+244=Ps.95-Ps.96
+245=Rom.12
+246=Rom.13
+247=Rom.14
+248=Rom.15
+249=Rom.16
+250=Ps.97-Ps.98
+251=Prov.21
+252=Ps.99-Ps.102
+253=1Cor.1
+254=1Cor.2
+255=1Cor.3
+256=Ps.103
+257=1Cor.4
+258=1Cor.5
+259=Ps.104
+260=1Cor.6
+261=1Cor.7
+262=1Cor.8
+263=1Cor.9
+264=Ps.105
+265=1Cor.10
+266=1Cor.11
+267=1Cor.12
+268=1Cor.13
+269=1Cor.14
+270=1Cor.15
+271=1Cor.16
+272=Prov.22
+273=Ps.106-Ps.108
+274=2Cor.1
+275=2Cor.2
+276=2Cor.3
+277=Ps.108-Ps.109
+278=2Cor.4
+279=2Cor.5
+280=Ps.110-Ps.111
+281=2Cor.6
+282=2Cor.7
+283=Ps.112-Ps.114
+284=Prov.23
+285=2Cor.8
+286=2Cor.9
+287=Ps.115-Ps.116
+288=2Cor.10
+289=2Cor.11
+290=2Cor.12
+291=2Cor.13
+292=Ps.117-Ps.118
+293=Prov.24
+294=Jude.1
+295=Ps.119
+296=1John.1
+297=1John.2
+298=1John.3
+299=1John.4
+300=1John.5
+301=Ps.120-Ps.122
+302=Prov.25
+303=2John.1
+304=3John.1
+305=Ps.123-Ps.125
+306=John.1
+307=John.2
+308=John.3
+309=John.4
+310=John.5
+311=Ps.126-Ps.128
+312=Prov.26
+313=John.6
+314=John.7
+315=John.8
+316=John.9
+317=Ps.129-Ps.131
+318=John.10
+319=John.11
+320=John.12
+321=Ps.132
+322=Prov.27
+323=John.13
+324=John.14
+325=John.15
+326=John.16
+327=John.17
+328=Ps.133-Ps.134
+329=Ps.135-Ps.136
+330=John.18
+331=John.19
+332=John.20
+333=John.21
+334=Prov.28
+335=Ps.137-Ps.138
+336=Rev.1
+337=Rev.2
+338=Rev.3
+339=Ps.139-Ps.140
+340=Ps.141-Ps.142
+341=Rev.4
+342=Rev.5
+343=Rev.6
+344=Rev.7
+345=Ps.143-Ps.145
+346=Prov.29
+347=Rev.8
+348=Rev.9
+349=Rev.10
+350=Rev.11
+351=Ps.146-Ps.147
+352=Prov.30
+353=Rev.12
+354=Rev.13
+355=Rev.14
+356=Rev.15
+357=Rev.16
+358=Rev.17
+359=Prov.31
+360=Rev.18
+361=Rev.19
+362=Rev.20
+363=Rev.21
+364=Rev.22
+365=Ps.148-Ps.150
