--- a/AndBible/assets/readingplan/y1ot1nt1_chronological.properties
+++ b/AndBible/assets/readingplan/y1ot1nt1_chronological.properties
@@ -1,365 +1,366 @@
-1=Gen 1-3 
-2=Gen 4-7 
-3=Gen 8-11 
-4=Job 1-5 
-5=Job 6-9 
-6=Job 10-13 
-7=Job 14-16 
-8=Job 17-20 
-9=Job 21-23 
-10=Job 24-28 
-11=Job 29-31 
-12=Job 32-34 
-13=Job 35-37 
-14=Job 38-39 
-15=Job 40-42 
-16=Gen 12-15 
-17=Gen 16-18 
-18=Gen 19-21 
-19=Gen 22-24 
-20=Gen 25-26 
-21=Gen 27-29 
-22=Gen 30-31 
-23=Gen 32-34 
-24=Gen 35-37 
-25=Gen 38-40 
-26=Gen 41-42 
-27=Gen 43-45 
-28=Gen 46-47 
-29=Gen 48-50 
-30=Exo 1-3 
-31=Exo 4-6 
-32=Exo 7-9 
-33=Exo 10-12 
-34=Exo 13-15 
-35=Exo 16-18 
-36=Exo 19-21 
-37=Exo 22-24 
-38=Exo 25-27 
-39=Exo 28-29 
-40=Exo 30-32 
-41=Exo 33-35 
-42=Exo 36-38 
-43=Exo 39-40 
-44=Lev 1-4 
-45=Lev 5-7 
-46=Lev 8-10 
-47=Lev 11-13 
-48=Lev 14-15 
-49=Lev 16-18 
-50=Lev 19-21 
-51=Lev 22-23 
-52=Lev 24-25 
-53=Lev 26-27 
-54=Num 1-2 
-55=Num 3-4 
-56=Num 5-6 
-57=Num 7 
-58=Num 8-10 
-59=Num 11-13 
-60=Num 14-15, Psa 90 
-61=Num 16-17 
-62=Num 18-20 
-63=Num 21-22 
-64=Num 23-25 
-65=Num 26-27 
-66=Num 28-30 
-67=Num 31-32 
-68=Num 33-34 
-69=Num 35-36 
-70=Deu 1-2 
-71=Deu 3-4 
-72=Deu 5-7 
-73=Deu 8-10 
-74=Deu 11-13 
-75=Deu 14-16 
-76=Deu 17-20 
-77=Deu 21-23 
-78=Deu 24-27 
-79=Deu 28-29 
-80=Deu 30-31 
-81=Deu 32-34, Psa 91 
-82=Jos 1-4 
-83=Jos 5-8 
-84=Jos 9-11 
-85=Jos 12-15 
-86=Jos 16-18 
-87=Jos 19-21 
-88=Jos 22-24 
-89=Judg 1-2 
-90=Judg 3-5 
-91=Judg 6-7 
-92=Judg 8-9 
-93=Judg 10-12 
-94=Judg 13-15 
-95=Judg 16-18 
-96=Judg 19-21 
-97=Rut 1-4 
-98=1Sa 1-3 
-99=1Sa 4-8 
-100=1Sa 9-12 
-101=1Sa 13-14 
-102=1Sa 15-17 
-103=Psa 11, 1Sa 18-20, Psa 59 
-104=1Sa 21-24 
-105=Psa 7, Psa 27, Psa 31, Psa 34, Psa 52 
-106=Psa 56, Psa 120, Psa 140-142 
-107=1Sa 25-27 
-108=Psa 17, Psa 35, Psa 54, Psa 63 
-109=Psa 18, 1Sa 28-31 
-110=Psa 121, Psa 123-125, Psa 128-130 
-111=2Sa 1-4 
-112=Psa 6, Psa 8-10, Psa 14, Psa 16, Psa 19, Psa 21 
-113=1Ch 1-2 
-114=Psa 43-45, Psa 49, Psa 84-85, Psa 87 
-115=1Ch 3-5 
-116=Psa 73, Psa 77-78 
-117=1Ch 6 
-118=Psa 81, Psa 88, Psa 92-93 
-119=1Ch 7-10 
-120=Psa 102-104 
-121=2Sa 5:1-10, 1Ch 11-12 
-122=Psa 133 
-123=Psa 106-107 
-124=2Sa 5:11-6:23, 1Ch 13-16 
-125=Psa 1-2, Psa 15, Psa 22-24, Psa 47, Psa 68 
-126=Psa 89, Psa 96, Psa 100, Psa 101, Psa 105, Psa 132 
-127=2Sa 7, 1Ch 17 
-128=Psa 25, Psa 29, Psa 33, Psa 36, Psa 39 
-129=2Sa 8-9, 1Ch 18 
-130=Psa 50, Psa 53, Psa 60, Psa 75 
-131=2Sa 10, 1Ch 19, Psa 20 
-132=Psa 65-67, Psa 69-70 
-133=2Sa 11-12, 1Ch 20 
-134=Psa 32, Psa 51, Psa 86, Psa 122 
-135=2Sa 13-15 
-136=Psa 3-4, Psa 12-13, Psa 28, Psa 55 
-137=2Sa 16-18 
-138=Psa 26, Psa 40, Psa 58, Psa 61-62, Psa 64 
-139=2Sa 19-21 
-140=Psa 5, Psa 38, Psa 41-42 
-141=2Sa 22-23, Psa 57 
-142=Psa 95, Psa 97-99 
-143=1Ch 21-22, 2Sa 24, Psa 30 
-144=Psa 108-110 
-145=1Ch 23-25 
-146=Psa 131, Psa 138-139, Psa 143-145 
-147=1Ch 26-29, Psa 127 
-148=Psa 111-118 
-149=1Ki 1-2, Psa 37, Psa 71, Psa 94 
-150=Psa 119:1-88 
-151=2Ch 1, 1Ki 3-4, Psa 72 
-152=Psa 119:89-176 
-153=Song 1-8 
-154=Pro 1-3 
-155=Pro 4-6 
-156=Pro 7-9 
-157=Pro 10-12 
-158=Pro 13-15 
-159=Pro 16-18 
-160=Pro 19-21 
-161=Pro 22-24 
-162=2Ch 2-3, 1Ki 5-6 
-163=2Ch 4, 1Ki 7 
-164=2Ch 5, 1Ki 8 
-165=2Ch 6-7, Psa 136 
-166=Psa 134, Psa 146-150 
-167=2Ch 8, 1Ki 9 
-168=Pro 25-26 
-169=Pro 27-29 
-170=Ecc 1-6 
-171=Ecc 7-12 
-172=2Ch 9, 1Ki 10-11 
-173=Pro 30-31 
-174=1Ki 12-14 
-175=2Ch 10-12 
-176=2Ch 13-16, 1Ki 15:1-24 
-177=1Ki 15:25-16:34, 2Ch 17 
-178=1Ki 17-19 
-179=1Ki 20-21 
-180=2Ch 18, 1Ki 22 
-181=2Ch 19-23 
-182=Obd, Psa 82-83 
-183=2Ki 1-4 
-184=2Ki 5-8 
-185=2Ki 9-11 
-186=2Ki 12-13, 2Ch 24 
-187=2Ki 14, 2Ch 25 
-188=Jon 1-4 
-189=2Ki 15, 2Ch 26 
-190=Isa 1-4 
-191=Isa 5-8 
-192=Amo 1-5 
-193=Amo 6-9 
-194=Isa 9-12, 2Ch 27 
-195=Mic 1-7 
-196=2Ki 16-17, 2Ch 28 
-197=Isa 13-17 
-198=Isa 18-22 
-199=Isa 23-27 
-200=2Ki 18:1-8, 2Ch 29-31, Psa 48 
-201=Hos 1-7 
-202=Hos 8-14 
-203=Isa 28-30 
-204=Isa 31-34 
-205=Isa 35-36 
-206=Isa 37-39, Psa 76 
-207=Isa 40-43 
-208=Isa 44-48 
-209=2Ki 18:9-19:37, Psa 46, Psa 80, Psa 135 
-210=Isa 49-53 
-211=Isa 54-58 
-212=Isa 59-63 
-213=Isa 64-66 
-214=2Ki 20-21 
-215=2Ch 32-33 
-216=Nah 1-3 
-217=2Ki 22-23, 2Ch 34-35 
-218=Zep 1-3 
-219=Jer 1-3 
-220=Jer 4-6 
-221=Jer 7-9 
-222=Jer 10-13 
-223=Jer 14-17 
-224=Jer 18-22 
-225=Jer 23-25 
-226=Jer 26-29 
-227=Jer 30-31 
-228=Jer 32-34 
-229=Jer 35-37 
-230=Jer 38-40, Psa 74, Psa 79 
-231=2Ki 24-25, 2Ch 36 
-232=Hab 1-3 
-233=Jer 41-45 
-234=Jer 46-48 
-235=Jer 49-50 
-236=Jer 51-52 
-237=Lam 1:1-3:36 
-238=Lam 3:37-5:22 
-239=Eze 1-4 
-240=Eze 5-8 
-241=Eze 9-12 
-242=Eze 13-15 
-243=Eze 16-17 
-244=Eze 18-19 
-245=Eze 20-21 
-246=Eze 22-23 
-247=Eze 24-27 
-248=Eze 28-31 
-249=Eze 32-34 
-250=Eze 35-37 
-251=Eze 38-39 
-252=Eze 40-41 
-253=Eze 42-43 
-254=Eze 44-45 
-255=Eze 46-48 
-256=Joe 1-3 
-257=Dan 1-3 
-258=Dan 4-6 
-259=Dan 7-9 
-260=Dan 10-12 
-261=Ezr 1-3 
-262=Ezr 4-6, Psa 137 
-263=Hag 1-2 
-264=Zec 1-7 
-265=Zec 8-14 
-266=Est 1-5 
-267=Est 6-10 
-268=Ezr 7-10 
-269=Neh 1-5 
-270=Neh 6-7 
-271=Neh 8-10 
-272=Neh 11-13, Psa 126 
-273=Mal 1-4 
-274=Luk 1, Joh 1:1-14 
-275=Mat 1, Luk 2:1-38 
-276=Mat 2, Luk 2:39-52 
-277=Mar 1, Luk 3, Mat 3 
-278=Joh 1:15-51, Mat 4, Luk 4-5 
-279=Joh 2-4 
-280=Mar 2 
-281=Joh 5 
-282=Mar 3, Luk 6, Mat 12:1-21 
-283=Mat 5-7 
-284=Luk 7, Mat 8:1-13 
-285=Mat 11 
-286=Luk 11, Mat 12:22-50 
-287=Luk 8, Mat 13 
-288=Mar 4-5, Mat 8:14-34 
-289=Mat 9-10 
-290=Mar 6, Luk 9:1-17, Mat 14 
-291=Joh 6 
-292=Mar 7, Mat 15 
-293=Mar 8, Luk 9:18-27, Mat 16 
-294=Mar 9, Luk 9:28-62, Mat 17 
-295=Mat 18 
-296=Joh 7-8 
-297=Joh 9:1-10:21 
-298=Joh 10:22-42, Luk 10-11 
-299=Luk 12-13 
-300=Luk 14-15 
-301=Luk 16:1-17:10 
-302=Joh 11 
-303=Luk 17:11-18:14 
-304=Mar 10, Mat 19 
-305=Mat 20-21 
-306=Luk 18:15-19:48 
-307=Mar 11, Joh 12 
-308=Mar 12, Mat 22 
-309=Luk 20-21, Mat 23 
-310=Mar 13 
-311=Mat 24 
-312=Mat 25 
-313=Mar 14, Mat 26 
-314=Joh 13, Luk 22 
-315=Joh 14-17 
-316=Mar 15, Mat 27 
-317=Joh 18-19, Luk 23 
-318=Mar 16, Mat 28 
-319=Joh 20-21, Luk 24 
-320=Act 1-3 
-321=Act 4-6 
-322=Act 7-8 
-323=Act 9-10 
-324=Act 11-12 
-325=Act 13-14 
-326=Jam 1-5 
-327=Act 15-16 
-328=Gal 1-3 
-329=Gal 4-6 
-330=Act 17:1-18:18 
-331=1Th 1-5, 2Th 1-3 
-332=Act 18:19-19:41 
-333=1Cor 1-4 
-334=1Cor 5-8 
-335=1Cor 9-11 
-336=1Cor 12-14 
-337=1Cor 15-16 
-338=2Cor 1-4 
-339=2Cor 5-9 
-340=2Cor 10-13 
-341=Rom 1-3, Act 20:1-3 
-342=Rom 4-7 
-343=Rom 8-10 
-344=Rom 11-13 
-345=Rom 14-16 
-346=Act 20:4-23:35 
-347=Act 24-26 
-348=Act 27-28 
-349=Phile, Col 1-4 
-350=Eph 1-6 
-351=Phili 1-4 
-352=1Ti 1-6 
-353=Tit 1-3 
-354=1Pe 1-5 
-355=Heb 1-6 
-356=Heb 7-10 
-357=Heb 11-13 
-358=2Ti 1-4 
-359=Jude, 2Pe 1-3 
-360=1 Joh 1-5 
-361=2 Joh, 3 Joh 
-362=Rev 1-5 
-363=Rev 6-11 
-364=Rev 12-18 
-365=Rev 19-22
+PassageReferenceType=OSIS
+1=Gen.1-Gen.3
+2=Gen.4-Gen.7
+3=Gen.8-Gen.11
+4=Job.1-Job.5
+5=Job.6-Job.9
+6=Job.10-Job.13
+7=Job.14-Job.16
+8=Job.17-Job.20
+9=Job.21-Job.23
+10=Job.24-Job.28
+11=Job.29-Job.31
+12=Job.32-Job.34
+13=Job.35-Job.37
+14=Job.38-Job.39
+15=Job.40-Job.42
+16=Gen.12-Gen.15
+17=Gen.16-Gen.18
+18=Gen.19-Gen.21
+19=Gen.22-Gen.24
+20=Gen.25-Gen.26
+21=Gen.27-Gen.29
+22=Gen.30-Gen.31
+23=Gen.32-Gen.34
+24=Gen.35-Gen.37
+25=Gen.38-Gen.40
+26=Gen.41-Gen.42
+27=Gen.43-Gen.45
+28=Gen.46-Gen.47
+29=Gen.48-Gen.50
+30=Exod.1-Exod.3
+31=Exod.4-Exod.6
+32=Exod.7-Exod.9
+33=Exod.10-Exod.12
+34=Exod.13-Exod.15
+35=Exod.16-Exod.18
+36=Exod.19-Exod.21
+37=Exod.22-Exod.24
+38=Exod.25-Exod.27
+39=Exod.28-Exod.29
+40=Exod.30-Exod.32
+41=Exod.33-Exod.35
+42=Exod.36-Exod.38
+43=Exod.39-Exod.40
+44=Lev.1-Lev.4
+45=Lev.5-Lev.7
+46=Lev.8-Lev.10
+47=Lev.11-Lev.13
+48=Lev.14-Lev.15
+49=Lev.16-Lev.18
+50=Lev.19-Lev.21
+51=Lev.22-Lev.23
+52=Lev.24-Lev.25
+53=Lev.26-Lev.27
+54=Num.1-Num.2
+55=Num.3-Num.4
+56=Num.5-Num.6
+57=Num.7
+58=Num.8-Num.10
+59=Num.11-Num.13
+60=Num.14-Num.15, Ps.90
+61=Num.16-Num.17
+62=Num.18-Num.20
+63=Num.21-Num.22
+64=Num.23-Num.25
+65=Num.26-Num.27
+66=Num.28-Num.30
+67=Num.31-Num.32
+68=Num.33-Num.34
+69=Num.35-Num.36
+70=Deut.1-Deut.2
+71=Deut.3-Deut.4
+72=Deut.5-Deut.7
+73=Deut.8-Deut.10
+74=Deut.11-Deut.13
+75=Deut.14-Deut.16
+76=Deut.17-Deut.20
+77=Deut.21-Deut.23
+78=Deut.24-Deut.27
+79=Deut.28-Deut.29
+80=Deut.30-Deut.31
+81=Deut.32-Deut.34, Ps.91
+82=Josh.1-Josh.4
+83=Josh.5-Josh.8
+84=Josh.9-Josh.11
+85=Josh.12-Josh.15
+86=Josh.16-Josh.18
+87=Josh.19-Josh.21
+88=Josh.22-Josh.24
+89=Judg.1-Judg.2
+90=Judg.3-Judg.5
+91=Judg.6-Judg.7
+92=Judg.8-Judg.9
+93=Judg.10-Judg.12
+94=Judg.13-Judg.15
+95=Judg.16-Judg.18
+96=Judg.19-Judg.21
+97=Ruth.1-Ruth.4
+98=1Sam.1-1Sam.3
+99=1Sam.4-1Sam.8
+100=1Sam.9-1Sam.12
+101=1Sam.13-1Sam.14
+102=1Sam.15-1Sam.17
+103=Ps.11, 1Sam.18-1Sam.20, Ps.59
+104=1Sam.21-1Sam.24
+105=Ps.7, Ps.27, Ps.31, Ps.34, Ps.52
+106=Ps.56, Ps.120, Ps.140-Ps.142
+107=1Sam.25-1Sam.27
+108=Ps.17, Ps.35, Ps.54, Ps.63
+109=Ps.18, 1Sam.28-1Sam.31
+110=Ps.121, Ps.123-Ps.125, Ps.128-Ps.130
+111=2Sam.1-2Sam.4
+112=Ps.6, Ps.8-Ps.10, Ps.14, Ps.16, Ps.19, Ps.21
+113=1Chr.1-1Chr.2
+114=Ps.43-Ps.45, Ps.49, Ps.84-Ps.85, Ps.87
+115=1Chr.3-1Chr.5
+116=Ps.73, Ps.77-Ps.78
+117=1Chr.6
+118=Ps.81, Ps.88, Ps.92-Ps.93
+119=1Chr.7-1Chr.10
+120=Ps.102-Ps.104
+121=2Sam.5.1-2Sam.5.10, 1Chr.11-1Chr.12
+122=Ps.133
+123=Ps.106-Ps.107
+124=2Sam.5.11-2Sam.6, 1Chr.13-1Chr.16
+125=Ps.1-Ps.2, Ps.15, Ps.22-Ps.24, Ps.47, Ps.68
+126=Ps.89, Ps.96, Ps.100, Ps.101, Ps.105, Ps.132
+127=2Sam.7, 1Chr.17
+128=Ps.25, Ps.29, Ps.33, Ps.36, Ps.39
+129=2Sam.8-2Sam.9, 1Chr.18
+130=Ps.50, Ps.53, Ps.60, Ps.75
+131=2Sam.10, 1Chr.19, Ps.20
+132=Ps.65-Ps.67, Ps.69-Ps.70
+133=2Sam.11-2Sam.12, 1Chr.20
+134=Ps.32, Ps.51, Ps.86, Ps.122
+135=2Sam.13-2Sam.15
+136=Ps.3-Ps.4, Ps.12-Ps.13, Ps.28, Ps.55
+137=2Sam.16-2Sam.18
+138=Ps.26, Ps.40, Ps.58, Ps.61-Ps.62, Ps.64
+139=2Sam.19-2Sam.21
+140=Ps.5, Ps.38, Ps.41-Ps.42
+141=2Sam.22-2Sam.23, Ps.57
+142=Ps.95, Ps.97-Ps.99
+143=1Chr.21-1Chr.22, 2Sam.24, Ps.30
+144=Ps.108-Ps.110
+145=1Chr.23-1Chr.25
+146=Ps.131, Ps.138-Ps.139, Ps.143-Ps.145
+147=1Chr.26-1Chr.29, Ps.127
+148=Ps.111-Ps.118
+149=1Kgs.1-1Kgs.2, Ps.37, Ps.71, Ps.94
+150=Ps.119.1-Ps.119.88
+151=2Chr.1, 1Kgs.3-1Kgs.4, Ps.72
+152=Ps.119.89-Ps.119.176
+153=Song.1-Song.8
+154=Prov.1-Prov.3
+155=Prov.4-Prov.6
+156=Prov.7-Prov.9
+157=Prov.10-Prov.12
+158=Prov.13-Prov.15
+159=Prov.16-Prov.18
+160=Prov.19-Prov.21
+161=Prov.22-Prov.24
+162=2Chr.2-2Chr.3, 1Kgs.5-1Kgs.6
+163=2Chr.4, 1Kgs.7
+164=2Chr.5, 1Kgs.8
+165=2Chr.6-2Chr.7, Ps.136
+166=Ps.134, Ps.146-Ps.150
+167=2Chr.8, 1Kgs.9
+168=Prov.25-Prov.26
+169=Prov.27-Prov.29
+170=Eccl.1-Eccl.6
+171=Eccl.7-Eccl.12
+172=2Chr.9, 1Kgs.10-1Kgs.11
+173=Prov.30-Prov.31
+174=1Kgs.12-1Kgs.14
+175=2Chr.10-2Chr.12
+176=2Chr.13-2Chr.16, 1Kgs.15.1-1Kgs.15.24
+177=1Kgs.15.25-1Kgs.16, 2Chr.17
+178=1Kgs.17-1Kgs.19
+179=1Kgs.20-1Kgs.21
+180=2Chr.18, 1Kgs.22
+181=2Chr.19-2Chr.23
+182=Obad.1, Ps.82-Ps.83
+183=2Kgs.1-2Kgs.4
+184=2Kgs.5-2Kgs.8
+185=2Kgs.9-2Kgs.11
+186=2Kgs.12-2Kgs.13, 2Chr.24
+187=2Kgs.14, 2Chr.25
+188=Jonah.1-Jonah.4
+189=2Kgs.15, 2Chr.26
+190=Isa.1-Isa.4
+191=Isa.5-Isa.8
+192=Amos.1-Amos.5
+193=Amos.6-Amos.9
+194=Isa.9-Isa.12, 2Chr.27
+195=Mic.1-Mic.7
+196=2Kgs.16-2Kgs.17, 2Chr.28
+197=Isa.13-Isa.17
+198=Isa.18-Isa.22
+199=Isa.23-Isa.27
+200=2Kgs.18.1-2Kgs.18.8, 2Chr.29-2Chr.31, Ps.48
+201=Hos.1-Hos.7
+202=Hos.8-Hos.14
+203=Isa.28-Isa.30
+204=Isa.31-Isa.34
+205=Isa.35-Isa.36
+206=Isa.37-Isa.39, Ps.76
+207=Isa.40-Isa.43
+208=Isa.44-Isa.48
+209=2Kgs.18.9-2Kgs.19, Ps.46, Ps.80, Ps.135
+210=Isa.49-Isa.53
+211=Isa.54-Isa.58
+212=Isa.59-Isa.63
+213=Isa.64-Isa.66
+214=2Kgs.20-2Kgs.21
+215=2Chr.32-2Chr.33
+216=Nah.1-Nah.3
+217=2Kgs.22-2Kgs.23, 2Chr.34-2Chr.35
+218=Zeph.1-Zeph.3
+219=Jer.1-Jer.3
+220=Jer.4-Jer.6
+221=Jer.7-Jer.9
+222=Jer.10-Jer.13
+223=Jer.14-Jer.17
+224=Jer.18-Jer.22
+225=Jer.23-Jer.25
+226=Jer.26-Jer.29
+227=Jer.30-Jer.31
+228=Jer.32-Jer.34
+229=Jer.35-Jer.37
+230=Jer.38-Jer.40, Ps.74, Ps.79
+231=2Kgs.24-2Kgs.25, 2Chr.36
+232=Hab.1-Hab.3
+233=Jer.41-Jer.45
+234=Jer.46-Jer.48
+235=Jer.49-Jer.50
+236=Jer.51-Jer.52
+237=Lam.1-Lam.3.36
+238=Lam.3.37-Lam.5
+239=Ezek.1-Ezek.4
+240=Ezek.5-Ezek.8
+241=Ezek.9-Ezek.12
+242=Ezek.13-Ezek.15
+243=Ezek.16-Ezek.17
+244=Ezek.18-Ezek.19
+245=Ezek.20-Ezek.21
+246=Ezek.22-Ezek.23
+247=Ezek.24-Ezek.27
+248=Ezek.28-Ezek.31
+249=Ezek.32-Ezek.34
+250=Ezek.35-Ezek.37
+251=Ezek.38-Ezek.39
+252=Ezek.40-Ezek.41
+253=Ezek.42-Ezek.43
+254=Ezek.44-Ezek.45
+255=Ezek.46-Ezek.48
+256=Joel.1-Joel.3
+257=Dan.1-Dan.3
+258=Dan.4-Dan.6
+259=Dan.7-Dan.9
+260=Dan.10-Dan.12
+261=Ezra.1-Ezra.3
+262=Ezra.4-Ezra.6, Ps.137
+263=Hag.1-Hag.2
+264=Zech.1-Zech.7
+265=Zech.8-Zech.14
+266=Esth.1-Esth.5
+267=Esth.6-Esth.10
+268=Ezra.7-Ezra.10
+269=Neh.1-Neh.5
+270=Neh.6-Neh.7
+271=Neh.8-Neh.10
+272=Neh.11-Neh.13, Ps.126
+273=Mal.1-Mal.4
+274=Luke.1, John.1.1-John.1.14
+275=Matt.1, Luke.2.1-Luke.2.38
+276=Matt.2, Luke.2.39-Luke.2.52
+277=Mark.1, Luke.3, Matt.3
+278=John.1.15-John.1.51, Matt.4, Luke.4-Luke.5
+279=John.2-John.4
+280=Mark.2
+281=John.5
+282=Mark.3, Luke.6, Matt.12.1-Matt.12.21
+283=Matt.5-Matt.7
+284=Luke.7, Matt.8.1-Matt.8.13
+285=Matt.11
+286=Luke.11, Matt.12.22-Matt.12.50
+287=Luke.8, Matt.13
+288=Mark.4-Mark.5, Matt.8.14-Matt.8.34
+289=Matt.9-Matt.10
+290=Mark.6, Luke.9.1-Luke.9.17, Matt.14
+291=John.6
+292=Mark.7, Matt.15
+293=Mark.8, Luke.9.18-Luke.9.27, Matt.16
+294=Mark.9, Luke.9.28-Luke.9.62, Matt.17
+295=Matt.18
+296=John.7-John.8
+297=John.9-John.10.21
+298=John.10.22-John.10.42, Luke.10-Luke.11
+299=Luke.12-Luke.13
+300=Luke.14-Luke.15
+301=Luke.16-Luke.17.10
+302=John.11
+303=Luke.17.11-Luke.18.14
+304=Mark.10, Matt.19
+305=Matt.20-Matt.21
+306=Luke.18.15-Luke.19
+307=Mark.11, John.12
+308=Mark.12, Matt.22
+309=Luke.20-Luke.21, Matt.23
+310=Mark.13
+311=Matt.24
+312=Matt.25
+313=Mark.14, Matt.26
+314=John.13, Luke.22
+315=John.14-John.17
+316=Mark.15, Matt.27
+317=John.18-John.19, Luke.23
+318=Mark.16, Matt.28
+319=John.20-John.21, Luke.24
+320=Acts.1-Acts.3
+321=Acts.4-Acts.6
+322=Acts.7-Acts.8
+323=Acts.9-Acts.10
+324=Acts.11-Acts.12
+325=Acts.13-Acts.14
+326=Jas.1-Jas.5
+327=Acts.15-Acts.16
+328=Gal.1-Gal.3
+329=Gal.4-Gal.6
+330=Acts.17-Acts.18.18
+331=1Thess.1-1Thess.5, 2Thess.1-2Thess.3
+332=Acts.18.19-Acts.19
+333=1Cor.1-1Cor.4
+334=1Cor.5-1Cor.8
+335=1Cor.9-1Cor.11
+336=1Cor.12-1Cor.14
+337=1Cor.15-1Cor.16
+338=2Cor.1-2Cor.4
+339=2Cor.5-2Cor.9
+340=2Cor.10-2Cor.13
+341=Rom.1-Rom.3, Acts.20.1-Acts.20.3
+342=Rom.4-Rom.7
+343=Rom.8-Rom.10
+344=Rom.11-Rom.13
+345=Rom.14-Rom.16
+346=Acts.20.4-Acts.23
+347=Acts.24-Acts.26
+348=Acts.27-Acts.28
+349=Phlm.1, Col.1-Col.4
+350=Eph.1-Eph.6
+351=Phil.1-Phil.4
+352=1Tim.1-1Tim.6
+353=Titus.1-Titus.3
+354=1Pet.1-1Pet.5
+355=Heb.1-Heb.6
+356=Heb.7-Heb.10
+357=Heb.11-Heb.13
+358=2Tim.1-2Tim.4
+359=Jude.1, 2Pet.1-2Pet.3
+360=1John.1-1John.5
+361=2John.1, 3John.1
+362=Rev.1-Rev.5
+363=Rev.6-Rev.11
+364=Rev.12-Rev.18
+365=Rev.19-Rev.22
