Use better OSIS with enhanced OsisParser

--- a/AndBible/assets/readingplan/y1ntpspr.properties
+++ b/AndBible/assets/readingplan/y1ntpspr.properties
@@ -88,7 +88,7 @@ PassageReferenceType=OSIS
 86=Titus.3
 87=Ps.32-Ps.33
 88=Prov.8
-89=Phlm.1
+89=Phlm
 90=Ps.34-Ps.35
 91=Mark.1
 92=Mark.2
@@ -293,7 +293,7 @@ PassageReferenceType=OSIS
 291=2Cor.13
 292=Ps.117-Ps.118
 293=Prov.24
-294=Jude.1
+294=Jude
 295=Ps.119
 296=1John.1
 297=1John.2
@@ -302,8 +302,8 @@ PassageReferenceType=OSIS
 300=1John.5
 301=Ps.120-Ps.122
 302=Prov.25
-303=2John.1
-304=3John.1
+303=2John
+304=3John
 305=Ps.123-Ps.125
 306=John.1
 307=John.2
