--- a/AndBible/assets/readingplan/y1ot1nt1_OTandNT.properties
+++ b/AndBible/assets/readingplan/y1ot1nt1_OTandNT.properties
@@ -96,7 +96,7 @@ PassageReferenceType=OSIS
 95=Judg.15-Judg.17, Luke.10.1-Luke.10.24
 96=Judg.18-Judg.19, Luke.10.25-Luke.10.42
 97=Judg.20-Judg.21, Luke.11.1-Luke.11.28
-98=Ruth.1-Ruth.4, Luke.11.29-Luke.11.54
+98=Ruth, Luke.11.29-Luke.11.54
 99=1Sam.1-1Sam.3, Luke.12.1-Luke.12.34
 100=1Sam.4-1Sam.6, Luke.12.35-Luke.12.59
 101=1Sam.7-1Sam.9, Luke.13.1-Luke.13.21
@@ -305,7 +305,7 @@ PassageReferenceType=OSIS
 304=Jer.29-Jer.30, Titus.1
 305=Jer.31-Jer.32, Titus.2
 306=Jer.33-Jer.35, Titus.3
-307=Jer.36-Jer.37, Phlm.1
+307=Jer.36-Jer.37, Phlm
 308=Jer.38-Jer.39, Heb.1
 309=Jer.40-Jer.42, Heb.2
 310=Jer.43-Jer.45, Heb.3
@@ -339,28 +339,28 @@ PassageReferenceType=OSIS
 338=Dan.3-Dan.4, 1John.3
 339=Dan.5-Dan.6, 1John.4
 340=Dan.7-Dan.8, 1John.5
-341=Dan.9-Dan.10, 2John.1
-342=Dan.11-Dan.12, 3John.1
-343=Hos.1-Hos.4, Jude.1
+341=Dan.9-Dan.10, 2John
+342=Dan.11-Dan.12, 3John
+343=Hos.1-Hos.4, Jude
 344=Hos.5-Hos.8, Rev.1
 345=Hos.9-Hos.11, Rev.2
 346=Hos.12-Hos.14, Rev.3
-347=Joel.1-Joel.3, Rev.4
+347=Joel, Rev.4
 348=Amos.1-Amos.3, Rev.5
 349=Amos.4-Amos.6, Rev.6
 350=Amos.7-Amos.9, Rev.7
-351=Obad.1, Rev.8
-352=Jonah.1-Jonah.4, Rev.9
+351=Obad, Rev.8
+352=Jonah, Rev.9
 353=Mic.1-Mic.3, Rev.10
 354=Mic.4-Mic.5, Rev.11
 355=Mic.6-Mic.7, Rev.12
-356=Nah.1-Nah.3, Rev.13
-357=Hab.1-Hab.3, Rev.14
-358=Zeph.1-Zeph.3, Rev.15
-359=Hag.1-Hag.2, Rev.16
+356=Nah, Rev.13
+357=Hab, Rev.14
+358=Zeph, Rev.15
+359=Hag, Rev.16
 360=Zech.1-Zech.3, Rev.17
 361=Zech.4-Zech.6, Rev.18
 362=Zech.7-Zech.9, Rev.19
 363=Zech.10-Zech.12, Rev.20
 364=Zech.13-Zech.14, Rev.21
-365=Mal.1-Mal.4, Rev.22
+365=Mal, Rev.22
