--- a/AndBible/assets/readingplan/y1ot1nt1_OTthenNT.properties
+++ b/AndBible/assets/readingplan/y1ot1nt1_OTthenNT.properties
@@ -78,7 +78,7 @@ PassageReferenceType=OSIS
 77=Judg.14-Judg.16
 78=Judg.17-Judg.19
 79=Judg.20-Judg.21
-80=Ruth.1-Ruth.4
+80=Ruth
 81=1Sam.1-1Sam.3
 82=1Sam.4-1Sam.7
 83=1Sam.8-1Sam.12
@@ -258,21 +258,21 @@ PassageReferenceType=OSIS
 257=Hos.1-Hos.4
 258=Hos.5-Hos.9
 259=Hos.10-Hos.14
-260=Joel.1-Joel.3
+260=Joel
 261=Amos.1-Amos.4
 262=Amos.5-Amos.9
-263=Obad.1
-264=Jonah.1-Jonah.4
+263=Obad
+264=Jonah
 265=Mic.1-Mic.4
 266=Mic.5-Mic.7
-267=Nah.1-Nah.3
-268=Hab.1-Hab.3
-269=Zeph.1-Zeph.3
-270=Hag.1-Hag.2
+267=Nah
+268=Hab
+269=Zeph
+270=Hag
 271=Zech.1-Zech.5
 272=Zech.6-Zech.10
 273=Zech.11-Zech.14
-274=Mal.1-Mal.4
+274=Mal
 275=Matt.1-Matt.4
 276=Matt.5-Matt.6
 277=Matt.7-Matt.9
@@ -342,22 +342,22 @@ PassageReferenceType=OSIS
 341=Gal.4-Gal.6
 342=Eph.1-Eph.3
 343=Eph.4-Eph.6
-344=Phil.1-Phil.4
-345=Col.1-Col.4
-346=1Thess.1-1Thess.5
-347=2Thess.1-2Thess.3
-348=1Tim.1-1Tim.6
-349=2Tim.1-2Tim.4
-350=Phlm.1,Tit.1-Tit.3
+344=Phil
+345=Col
+346=1Thess
+347=2Thess
+348=1Tim
+349=2Tim
+350=Phlm, Titus
 351=Heb.1-Heb.4
 352=Heb.5-Heb.8
 353=Heb.9-Heb.10
 354=Heb.11-Heb.13
-355=Jam.1-Jam.5
-356=1Pet.1-1Pet.5,2Pet.1-2Pet.3
-357=1John.1-1John.5
-358=2John.1,3John.1
-359=Jude.1,Rev.1-Rev.3
+355=Jas
+356=1Pet, 2Pet
+357=1John
+358=2John, 3John
+359=Jude, Rev.1-Rev.3
 360=Rev.4-Rev.7
 361=Rev.8-Rev.11
 362=Rev.12-Rev.14
