--- a/AndBible/assets/readingplan/y1ot1nt1_chronological.properties
+++ b/AndBible/assets/readingplan/y1ot1nt1_chronological.properties
@@ -95,7 +95,7 @@ PassageReferenceType=OSIS
 94=Judg.13-Judg.15
 95=Judg.16-Judg.18
 96=Judg.19-Judg.21
-97=Ruth.1-Ruth.4
+97=Ruth
 98=1Sam.1-1Sam.3
 99=1Sam.4-1Sam.8
 100=1Sam.9-1Sam.12
@@ -151,7 +151,7 @@ PassageReferenceType=OSIS
 150=Ps.119.1-Ps.119.88
 151=2Chr.1, 1Kgs.3-1Kgs.4, Ps.72
 152=Ps.119.89-Ps.119.176
-153=Song.1-Song.8
+153=Song
 154=Prov.1-Prov.3
 155=Prov.4-Prov.6
 156=Prov.7-Prov.9
@@ -180,20 +180,20 @@ PassageReferenceType=OSIS
 179=1Kgs.20-1Kgs.21
 180=2Chr.18, 1Kgs.22
 181=2Chr.19-2Chr.23
-182=Obad.1, Ps.82-Ps.83
+182=Obad, Ps.82-Ps.83
 183=2Kgs.1-2Kgs.4
 184=2Kgs.5-2Kgs.8
 185=2Kgs.9-2Kgs.11
 186=2Kgs.12-2Kgs.13, 2Chr.24
 187=2Kgs.14, 2Chr.25
-188=Jonah.1-Jonah.4
+188=Jonah
 189=2Kgs.15, 2Chr.26
 190=Isa.1-Isa.4
 191=Isa.5-Isa.8
 192=Amos.1-Amos.5
 193=Amos.6-Amos.9
 194=Isa.9-Isa.12, 2Chr.27
-195=Mic.1-Mic.7
+195=Mic
 196=2Kgs.16-2Kgs.17, 2Chr.28
 197=Isa.13-Isa.17
 198=Isa.18-Isa.22
@@ -214,9 +214,9 @@ PassageReferenceType=OSIS
 213=Isa.64-Isa.66
 214=2Kgs.20-2Kgs.21
 215=2Chr.32-2Chr.33
-216=Nah.1-Nah.3
+216=Nah
 217=2Kgs.22-2Kgs.23, 2Chr.34-2Chr.35
-218=Zeph.1-Zeph.3
+218=Zeph
 219=Jer.1-Jer.3
 220=Jer.4-Jer.6
 221=Jer.7-Jer.9
@@ -230,7 +230,7 @@ PassageReferenceType=OSIS
 229=Jer.35-Jer.37
 230=Jer.38-Jer.40, Ps.74, Ps.79
 231=2Kgs.24-2Kgs.25, 2Chr.36
-232=Hab.1-Hab.3
+232=Hab
 233=Jer.41-Jer.45
 234=Jer.46-Jer.48
 235=Jer.49-Jer.50
@@ -254,14 +254,14 @@ PassageReferenceType=OSIS
 253=Ezek.42-Ezek.43
 254=Ezek.44-Ezek.45
 255=Ezek.46-Ezek.48
-256=Joel.1-Joel.3
+256=Joel
 257=Dan.1-Dan.3
 258=Dan.4-Dan.6
 259=Dan.7-Dan.9
 260=Dan.10-Dan.12
 261=Ezra.1-Ezra.3
 262=Ezra.4-Ezra.6, Ps.137
-263=Hag.1-Hag.2
+263=Hag
 264=Zech.1-Zech.7
 265=Zech.8-Zech.14
 266=Esth.1-Esth.5
@@ -271,7 +271,7 @@ PassageReferenceType=OSIS
 270=Neh.6-Neh.7
 271=Neh.8-Neh.10
 272=Neh.11-Neh.13, Ps.126
-273=Mal.1-Mal.4
+273=Mal
 274=Luke.1, John.1.1-John.1.14
 275=Matt.1, Luke.2.1-Luke.2.38
 276=Matt.2, Luke.2.39-Luke.2.52
@@ -324,12 +324,12 @@ PassageReferenceType=OSIS
 323=Acts.9-Acts.10
 324=Acts.11-Acts.12
 325=Acts.13-Acts.14
-326=Jas.1-Jas.5
+326=Jas
 327=Acts.15-Acts.16
 328=Gal.1-Gal.3
 329=Gal.4-Gal.6
 330=Acts.17-Acts.18.18
-331=1Thess.1-1Thess.5, 2Thess.1-2Thess.3
+331=1Thess, 2Thess
 332=Acts.18.19-Acts.19
 333=1Cor.1-1Cor.4
 334=1Cor.5-1Cor.8
@@ -347,19 +347,19 @@ PassageReferenceType=OSIS
 346=Acts.20.4-Acts.23
 347=Acts.24-Acts.26
 348=Acts.27-Acts.28
-349=Phlm.1, Col.1-Col.4
-350=Eph.1-Eph.6
-351=Phil.1-Phil.4
-352=1Tim.1-1Tim.6
-353=Titus.1-Titus.3
-354=1Pet.1-1Pet.5
+349=Phlm, Col
+350=Eph
+351=Phil
+352=1Tim
+353=Titus
+354=1Pet
 355=Heb.1-Heb.6
 356=Heb.7-Heb.10
 357=Heb.11-Heb.13
-358=2Tim.1-2Tim.4
-359=Jude.1, 2Pet.1-2Pet.3
-360=1John.1-1John.5
-361=2John.1, 3John.1
+358=2Tim
+359=Jude, 2Pet
+360=1John
+361=2John, 3John
 362=Rev.1-Rev.5
 363=Rev.6-Rev.11
 364=Rev.12-Rev.18
