--- a/AndBible/assets/readingplan/y1ot1nt2_mcheyne.properties
+++ b/AndBible/assets/readingplan/y1ot1nt2_mcheyne.properties
@@ -113,7 +113,7 @@ PassageReferenceType=OSIS
 112=Lev.26, Ps.33, Eccl.9, Titus.1
 113=Lev.27, Ps.34, Eccl.10, Titus.2
 114=Num.1, Ps.35, Eccl.11, Titus.3
-115=Num.2, Ps.36, Eccl.12, Phlm.1
+115=Num.2, Ps.36, Eccl.12, Phlm
 116=Num.3, Ps.37, Song.1, Heb.1
 117=Num.4, Ps.38, Song.2, Heb.2
 118=Num.5, Ps.39, Song.3, Heb.3
@@ -145,9 +145,9 @@ PassageReferenceType=OSIS
 144=Num.33, Ps.78.1-Ps.78.39, Isa.25, 1John.3
 145=Num.34, Ps.78.40-Ps.78.72, Isa.26, 1John.4
 146=Num.35, Ps.79, Isa.27, 1John.5
-147=Num.36, Ps.80, Isa.28, 2John.1
-148=Deut.1, Ps.81-Ps.82, Isa.29, 3John.1
-149=Deut.2, Ps.83-Ps.84, Isa.30, Jude.1
+147=Num.36, Ps.80, Isa.28, 2John
+148=Deut.1, Ps.81-Ps.82, Isa.29, 3John
+149=Deut.2, Ps.83-Ps.84, Isa.30, Jude
 150=Deut.3, Ps.85, Isa.31, Rev.1
 151=Deut.4, Ps.86-Ps.87, Isa.32, Rev.2
 152=Deut.5, Ps.88, Isa.33, Rev.3
@@ -323,7 +323,7 @@ PassageReferenceType=OSIS
 322=1Chr.11-1Chr.12, Heb.13, Amos.7, Luke.2
 323=1Chr.13-1Chr.14, Jas.1, Amos.8, Luke.3
 324=1Chr.15, Jas.2, Amos.9, Luke.4
-325=1Chr.16, Jas.3, Obad.1, Luke.5
+325=1Chr.16, Jas.3, Obad, Luke.5
 326=1Chr.17, Jas.4, Jonah.1, Luke.6
 327=1Chr.18, Jas.5, Jonah.2, Luke.7
 328=1Chr.19-1Chr.20, 1Pet.1, Jonah.3, Luke.8
