Remove ReferenceType property from reading plans; trim readings

--- a/AndBible/assets/readingplan/y1ot1nt2_mcheyne.properties
+++ b/AndBible/assets/readingplan/y1ot1nt2_mcheyne.properties
@@ -1,4 +1,3 @@
-PassageReferenceType=OSIS
 1=Gen.1, Matt.1, Ezra.1, Acts.1
 2=Gen.2, Matt.2, Ezra.2, Acts.2
 3=Gen.3, Matt.3, Ezra.3, Acts.3
@@ -341,7 +340,7 @@ PassageReferenceType=OSIS
 340=2Chr.6.12-2Chr.6.42, 1John.5, Hab.1, Luke.20
 341=2Chr.7, 2John, Hab.2, Luke.21
 342=2Chr.8, 3John, Hab.3, Luke.22
-343=2Chr.9, Jude, Zeph.1, Luke.23
+343=2Chr.9, Jude.1, Zeph.1, Luke.23
 344=2Chr.10, Rev.1, Zeph.2, Luke.24
 345=2Chr.11-2Chr.12, Rev.2, Zeph.3, John.1
 346=2Chr.13, Rev.3, Hag.1, John.2
