--- a/AndBible/assets/readingplan/y1ntpspr.properties
+++ b/AndBible/assets/readingplan/y1ntpspr.properties
@@ -1,4 +1,4 @@
-# Courtesy of HEARTLIGHT Internet Magazine http://www.heartlight.org
+# Courtesy of HEARTLIGHT Internet Magazine, http://www.heartlight.org, permission granted
 1=Ps.1-Ps.2
 2=Luke.1
 3=Luke.2
