--- a/AndBible/AndroidManifest.xml
+++ b/AndBible/AndroidManifest.xml
@@ -146,7 +146,7 @@
                   android:configChanges="keyboardHidden|orientation|screenSize|locale">
         </activity>
         <activity
-            android:name="net.bible.android.view.activity.install_zip.InstallZip"
+            android:name="net.bible.android.view.activity.installzip.InstallZip"
             android:label="@string/install_zip" >
         </activity>
         
