--- a/jsword-tweaks/build.xml
+++ b/jsword-tweaks/build.xml
@@ -34,7 +34,9 @@
 			
 	<target name="mergeCode" depends="init">
 		<copy todir="${build.src}">
-			<fileset dir="${jsword.src}"/>
+			<fileset dir="${jsword.src}">
+			    <exclude name="org/crosswire/jsword/book/install/sword/FTPExample.java" />
+			</fileset>
 			<fileset dir="${jsword.resources}">
 				<exclude name="org/crosswire/jsword/versification/**" />
 			</fileset>
@@ -63,7 +65,7 @@
 	</target>
 
 	<target name="compile" depends="mergeCode">
-		<javac srcdir="${build.src}" destdir="${build.class}" classpathref="classpath" debug="true" source="1.6" target="1.6"/>
+		<javac srcdir="${build.src}" destdir="${build.class}" classpathref="classpath" debug="true" source="1.6" target="1.6" createMissingPackageInfoClass="false"/>
 	</target>
 
 	<target name="jar" depends="compile">
