--- a/jsword-tweaks/build.xml
+++ b/jsword-tweaks/build.xml
@@ -36,6 +36,7 @@
 		<copy todir="${build.src}">
 			<fileset dir="${jsword.src}">
 			    <exclude name="org/crosswire/jsword/book/install/sword/FTPExample.java" />
+			    <exclude name="org/crosswire/jsword/examples/Bench.java" />
 			</fileset>
 			<fileset dir="${jsword.resources}">
 				<exclude name="org/crosswire/jsword/versification/**" />
