add new build files

--- a/and-bible/.gitignore
+++ b/and-bible/.gitignore
@@ -1,7 +1,8 @@
-/bin
-/gen
+*.iml
+.gradle
+/local.properties
+/.idea/workspace.xml
+/.idea/libraries
+.DS_Store
 /build
-local.properties
-/.settings
-/.gradle
-
+/captures
