--- a/and-bible/app/build.gradle
+++ b/and-bible/app/build.gradle
@@ -23,6 +23,11 @@ android {
         targetCompatibility JavaVersion.VERSION_1_7
     }
 
+    testOptions {
+        // prevent logger errors
+        unitTests.returnDefaultValues = true
+    }
+
     packagingOptions {
         exclude 'META-INF/LICENSE.txt'
         exclude 'META-INF/NOTICE.txt'
@@ -30,8 +35,10 @@ android {
 }
 
 dependencies {
-//    compile fileTree(dir: 'libs', include: ['*.jar'])
+    testCompile 'org.hamcrest:hamcrest-library:1.3'
+    testCompile 'org.mockito:mockito-core:1.10.19'
     testCompile 'junit:junit:4.12'
+    testCompile 'org.robolectric:robolectric:3.0'
     compile 'com.android.support:appcompat-v7:19.+'
 
     compile files('libs/jsword.jar')
@@ -40,7 +47,7 @@ dependencies {
     compile 'org.jdom:jdom2:2.0.5'
     compile 'org.apache.httpcomponents:httpclient-android:4.3.3'
     compile 'org.apache.commons:commons-compress:1.7'
-    compile 'org.slf4j:slf4j-android:1.7.7'
+    compile 'de.psdev.slf4j-android-logger:slf4j-android-logger:1.0.4'
 
     compile 'org.apache.lucene:lucene-core:3.0.3'
     compile 'org.apache.lucene:lucene-snowball:3.0.3'
