update transifex files for new structure

--- a/and-bible/.tx/config
+++ b/and-bible/.tx/config
@@ -2,8 +2,8 @@
 host = https://www.transifex.com
 
 [andbible.and-bible-stringsxml]
-file_filter = res/values-<lang>/strings.xml
+file_filter = app/src/main/res/values-<lang>/strings.xml
 source_lang = en
-source_file = res/values/strings.xml
+source_file = app/src/main/res/values/strings.xml
 lang_map = zh_TW: zh-rTW
 lang_map = az@latin: az
