--- a/and-bible/app/src/main/AndroidManifest.xml
+++ b/and-bible/app/src/main/AndroidManifest.xml
@@ -42,14 +42,17 @@
         </activity>
         <activity android:name="net.bible.android.view.activity.navigation.GridChoosePassageBook"
                   android:label="@string/choosePassageBookName"
+				  android:theme="@style/AppThemeNight"
                   android:configChanges="keyboardHidden|locale">
         </activity>
         <activity android:name="net.bible.android.view.activity.navigation.GridChoosePassageChapter"
                   android:label="@string/choosePassageChapterName"
+				  android:theme="@style/AppThemeNight"
                   android:configChanges="keyboardHidden|locale">
         </activity>
         <activity android:name="net.bible.android.view.activity.navigation.GridChoosePassageVerse"
                   android:label="@string/choosePassageVerseName"
+				  android:theme="@style/AppThemeNight"
                   android:configChanges="keyboardHidden|locale">
         </activity>
         <activity android:name="net.bible.android.view.activity.search.Search"
