--- a/and-bible/app/src/main/AndroidManifest.xml
+++ b/and-bible/app/src/main/AndroidManifest.xml
@@ -80,6 +80,10 @@
                   android:label="@string/bookmarks"
                   android:configChanges="keyboardHidden|orientation|screenSize|locale">
         </activity>
+		<activity android:name="net.bible.android.view.activity.bookmark.ManageLabels"
+				  android:label="@string/manage_labels"
+				  android:configChanges="keyboardHidden|orientation|screenSize|locale">
+		</activity>
         <activity android:name="net.bible.android.view.activity.bookmark.BookmarkLabels"
                   android:label="@string/bookmark_labels"
                   android:configChanges="keyboardHidden|orientation|screenSize|locale">
