--- a/and-bible/app/build.gradle
+++ b/and-bible/app/build.gradle
@@ -1,8 +1,8 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion "24.0.3"
+    compileSdkVersion 25
+    buildToolsVersion "25.0.2"
 
     /** these config values override those in AndroidManifest.xml.  Can also set versionCode and versionName */
     defaultConfig {
@@ -41,20 +41,23 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:24.2.1'
-    compile 'com.android.support:design:24.2.1'
+    compile 'com.android.support:appcompat-v7:25.1.0'
+    compile 'com.android.support:design:25.1.0'
 
     compile files('libs/jsword.jar')
     compile files('libs/mmseg4j-all-1.8.4.jar')
     compile 'de.greenrobot:eventbus:2.4.0'
     compile 'org.jdom:jdom2:2.0.6'
-    compile 'org.apache.httpcomponents:httpclient-android:4.3.3'
-    compile 'org.apache.commons:commons-compress:1.7'
-    compile 'de.psdev.slf4j-android-logger:slf4j-android-logger:1.0.4'
+    compile 'org.apache.httpcomponents:httpclient-android:4.3.5.1'
+    compile 'org.apache.commons:commons-compress:1.12'
+    compile 'de.psdev.slf4j-android-logger:slf4j-android-logger:1.0.5'
 
     compile 'org.apache.lucene:lucene-core:3.0.3'
     compile 'org.apache.lucene:lucene-snowball:3.0.3'
     compile 'org.apache.lucene:lucene-analyzers:3.0.3'
+
+    // allow annotations like UIThread, StringRes see: https://developer.android.com/reference/android/support/annotation/package-summary.html
+    compile 'com.android.support:support-annotations:25.1.0'
 
     testCompile 'org.hamcrest:hamcrest-library:1.3'
     testCompile 'org.mockito:mockito-core:1.10.19'
