--- a/and-bible/app/build.gradle
+++ b/and-bible/app/build.gradle
@@ -14,9 +14,15 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+//		debug {
+//			minifyEnabled true
+//			useProguard true
+//			proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+//			zipAlignEnabled true
+//		}
     }
 
     lintOptions {
