--- a/and-bible/app/build.gradle
+++ b/and-bible/app/build.gradle
@@ -52,6 +52,10 @@ dependencies {
 
     compile files('libs/jsword.jar')
     compile files('libs/mmseg4j-all-1.8.4.jar')
+
+    compile 'com.google.dagger:dagger:2.8'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.8'
+
     compile 'de.greenrobot:eventbus:2.4.0'
     compile 'org.jdom:jdom2:2.0.6'
     compile 'org.apache.httpcomponents:httpclient-android:4.3.5.1'
