#75 fix Song of Songs reading in y1ot1nt1_OTandNT

--- a/and-bible/app/src/main/assets/readingplan/y1ot1nt1_OTandNT.properties
+++ b/and-bible/app/src/main/assets/readingplan/y1ot1nt1_OTandNT.properties
@@ -261,9 +261,9 @@
 261=Eccl.4-Eccl.6, 2Cor.10
 262=Eccl.7-Eccl.9, 2Cor.11.1-2Cor.11.15
 263=Eccl.10-Eccl.12, 2Cor.11.16-2Cor.11.33
-264=Sng.1-Sng.3, 2Cor.12
-265=Sng.4-Sng.5, 2Cor.13
-266=Sng.6-Sng.8, Gal.1
+264=Song.1-Song.3, 2Cor.12
+265=Song.4-Song.5, 2Cor.13
+266=Song.6-Song.8, Gal.1
 267=Isa.1-Isa.3, Gal.2
 268=Isa.4-Isa.6, Gal.3
 269=Isa.7-Isa.9, Gal.4
